<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewGameActivity">

    <TextView
        android:id="@+id/new_game_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fourty"
        android:layout_marginEnd="@dimen/fourty"
        android:layout_marginTop="@dimen/sixtyfour"
        android:text="@string/start_a_new_game"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_game_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_game_help_text1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/new_game_title"
        app:layout_constraintStart_toStartOf="@+id/new_game_title"
        app:layout_constraintTop_toBottomOf="@+id/new_game_title" />

    <TextView
        android:id="@+id/new_game_description2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_game_help_text2"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/new_game_description"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/new_game_description"
        app:layout_constraintTop_toBottomOf="@+id/new_game_description" />

    <EditText
        android:id="@+id/new_game_username_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fourtyeight"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/new_game_description2"
        app:layout_constraintStart_toStartOf="@+id/new_game_description2"
        app:layout_constraintTop_toBottomOf="@+id/new_game_description2"
        android:autofillHints="username" />

    <TextView
        android:id="@+id/new_game_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fourty"
        android:text="@string/difficulty"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/new_game_username_input"
        app:layout_constraintStart_toStartOf="@+id/new_game_username_input"
        app:layout_constraintTop_toBottomOf="@+id/new_game_username_input" />


    <RadioGroup
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        app:layout_constraintEnd_toEndOf="@+id/new_game_difficulty"
        app:layout_constraintStart_toStartOf="@+id/new_game_difficulty"
        app:layout_constraintTop_toBottomOf="@+id/new_game_difficulty">

        <RadioButton
            android:id="@+id/difficulty_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_easy" />

        <RadioButton
            android:id="@+id/difficulty_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_medium" />

        <RadioButton
            android:id="@+id/difficulty_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_hard" />
    </RadioGroup>

    <Button
        android:id="@+id/start_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sixteen"
        android:text="@string/start"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/new_game_help"
        android:layout_width="@dimen/sixtyfour"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:text="@string/help"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>