<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkGrey"
    tools:context=".activities.GameActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVBoard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idRVBoard">

        <TextView
            android:id="@+id/idTVTimerLabel"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/timeLabel"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTVTimer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/TimerDefault"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTVBombCountLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/BombCountLabel"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTVBombCount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/idTVBombCountLabel" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
